removed comments of stuff we will very likley never revert back to and formatted the code for more readability. We can always look at git history and/or revert if confusion arises.